# Friction

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
packaging/homebrew/: friction.rb
reports/: friction-status-2026-03-04.md
scripts/release/: macos-sign-notarize.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/agents/: mod.rs
src-tauri/src/git/: mod.rs
src-tauri/src/judge/: mod.rs
src-tauri/src/session/: mod.rs  store.rs
src/components/: AgentCard.tsx  ConfirmDialog.tsx  DiffViewer.tsx  DivergenceBlock.tsx  MultiPlanArbitrationCard.tsx  OnboardingCliSetupScreen.tsx  PlanPanel.tsx  SessionsDrawer.tsx  SettingsDialog.tsx  ThemeProvider.tsx
src/components/ai-elements/: model-selector.tsx  prompt-input.tsx  terminal.tsx
src/components/chat/: AssistantMessageArtifactAware.tsx  ClarificationHelper.tsx  CodeCard.tsx  CommandTimelineCard.tsx  ConversationShell.tsx  DecisionPhase2Inline.tsx  DualCliTerminalCard.tsx  ExecutionBriefCard.tsx  FrictionInboxCard.tsx  PlanCard.tsx  (+10 more)
src/lib/: api.ts  divergence.ts  formatters.ts  model-catalog.ts  model-presets.ts  orchestrator.ts  route-state.ts  session.ts  shortcuts.ts  types.ts
(+9 files in other folders)
